compilingLab2/gramtree_v1.output
Terminals unused in grammar

   SPACE
   AERROR
   GRAET


状态 0conflicts: 1 reduce/reduce
状态 68conflicts: 1 shift/reduce
状态 69conflicts: 1 shift/reduce
状态 70conflicts: 1 shift/reduce
状态 104conflicts: 1 shift/reduce
状态 105conflicts: 19 shift/reduce
状态 106conflicts: 1 shift/reduce
状态 107conflicts: 1 shift/reduce
状态 108conflicts: 1 shift/reduce
状态 109conflicts: 1 shift/reduce
状态 110conflicts: 1 shift/reduce
状态 111conflicts: 1 shift/reduce
状态 112conflicts: 1 shift/reduce
状态 113conflicts: 1 shift/reduce
状态 114conflicts: 1 shift/reduce
状态 115conflicts: 1 shift/reduce
状态 116conflicts: 1 shift/reduce
状态 117conflicts: 1 shift/reduce
状态 118conflicts: 1 shift/reduce
状态 125conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: %empty
    2        | ExtDefList

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifire ExtDecList SEMI
    6       | Specifire SEMI
    7       | Specifire FunDec Compst

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifire: TYPE
   11          | StructSpecifire

   12 StructSpecifire: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INTEGER RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifire VarDec

   24 Compst: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | Compst
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifire DecList SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNOP Exp

   40 Exp: Exp ASSIGNOP Exp
   41    | Exp PLUS Exp
   42    | Exp MINUS Exp
   43    | Exp MUL Exp
   44    | Exp DIV Exp
   45    | Exp GREAT Exp
   46    | Exp LESS Exp
   47    | Exp GASSIGN Exp
   48    | Exp LESSASSIGN Exp
   49    | Exp DOUBLEASSIGN Exp
   50    | Exp NOTASSIGN Exp
   51    | Exp PLUSASSIGN Exp
   52    | Exp SUBASSIGN Exp
   53    | Exp MULASSIGN Exp
   54    | Exp DIVASSIGN Exp
   55    | Exp DOUBLEPLUS
   56    | Exp DOUBLESUB
   57    | DOUBLEPLUS Exp
   58    | DOUBLESUB Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp SPDOT ID
   65    | ID
   66    | INTEGER
   67    | FLOAT
   68    | CHAR

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 18 66
FLOAT (259) 67
CHAR (260) 68
TYPE (261) 10
RETURN (262) 29
IF (263) 30 31
ELSE (264) 31
WHILE (265) 32
ID (266) 14 16 17 19 20 61 62 64 65
SPACE (267)
SEMI (268) 5 6 27 29 35
COMMA (269) 9 21 37 69
SPDOT (270) 64
ASSIGNOP (271) 39 40
GREAT (272) 45
LESS (273) 46
GASSIGN (274) 47
LESSASSIGN (275) 48
DOUBLEASSIGN (276) 49
NOTASSIGN (277) 50
PLUSASSIGN (278) 51
SUBASSIGN (279) 52
DIVASSIGN (280) 54
MULASSIGN (281) 53
DOUBLEPLUS (282) 55 57
DOUBLESUB (283) 56 58
PLUS (284) 41
MINUS (285) 42 60
MUL (286) 43
DIV (287) 44
LP (288) 19 20 30 31 32 59 61 62
RP (289) 19 20 30 31 32 59 61 62
LB (290) 18 63
RB (291) 18 63
LC (292) 12 24
RC (293) 12 24
AERROR (294)
STRUCT (295) 12 13
GRAET (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1 2, on right: 0
ExtDefList (44)
    on left: 3 4, on right: 2 3
ExtDef (45)
    on left: 5 6 7, on right: 3
ExtDecList (46)
    on left: 8 9, on right: 5 9
Specifire (47)
    on left: 10 11, on right: 5 6 7 23 35
StructSpecifire (48)
    on left: 12 13, on right: 11
OptTag (49)
    on left: 14 15, on right: 12
Tag (50)
    on left: 16, on right: 13
VarDec (51)
    on left: 17 18, on right: 8 9 18 23 38 39
FunDec (52)
    on left: 19 20, on right: 7
VarList (53)
    on left: 21 22, on right: 19 21
ParamDec (54)
    on left: 23, on right: 21 22
Compst (55)
    on left: 24, on right: 7 28
StmtList (56)
    on left: 25 26, on right: 24 25
Stmt (57)
    on left: 27 28 29 30 31 32, on right: 25 30 31 32
DefList (58)
    on left: 33 34, on right: 12 24 33
Def (59)
    on left: 35, on right: 33
DecList (60)
    on left: 36 37, on right: 35 37
Dec (61)
    on left: 38 39, on right: 36 37
Exp (62)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68, on right: 27 29 30 31 32 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 63
    64 69 70
Args (63)
    on left: 69 70, on right: 61 69


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $end      reduce using rule 1 (Program)
    $end      [reduce using rule 4 (ExtDefList)]
    $default  reduce using rule 1 (Program)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifire        转到状态 6
    StructSpecifire  转到状态 7


State 1

   10 Specifire: TYPE .

    $default  reduce using rule 10 (Specifire)


State 2

   12 StructSpecifire: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    2 Program: ExtDefList .

    $default  reduce using rule 2 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifire        转到状态 6
    StructSpecifire  转到状态 7


State 6

    5 ExtDef: Specifire . ExtDecList SEMI
    6       | Specifire . SEMI
    7       | Specifire . FunDec Compst

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   11 Specifire: StructSpecifire .

    $default  reduce using rule 11 (Specifire)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifire: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifire: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifire)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    6 ExtDef: Specifire SEMI .

    $default  reduce using rule 6 (ExtDef)


State 15

    5 ExtDef: Specifire ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INTEGER RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    7 ExtDef: Specifire FunDec . Compst

    LC  shift, and go to state 23

    Compst  转到状态 24


State 18

   12 StructSpecifire: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifire        转到状态 25
    StructSpecifire  转到状态 7
    DefList          转到状态 26
    Def              转到状态 27


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 28
    STRUCT  shift, and go to state 2

    Specifire        转到状态 29
    StructSpecifire  转到状态 7
    VarList          转到状态 30
    ParamDec         转到状态 31


State 20

    5 ExtDef: Specifire ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  转到状态 33
    VarDec      转到状态 16


State 22

   18 VarDec: VarDec LB . INTEGER RB

    INTEGER  shift, and go to state 34


State 23

   24 Compst: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifire        转到状态 25
    StructSpecifire  转到状态 7
    DefList          转到状态 35
    Def              转到状态 27


State 24

    7 ExtDef: Specifire FunDec Compst .

    $default  reduce using rule 7 (ExtDef)


State 25

   35 Def: Specifire . DecList SEMI

    ID  shift, and go to state 32

    VarDec   转到状态 36
    DecList  转到状态 37
    Dec      转到状态 38


State 26

   12 StructSpecifire: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 39


State 27

   33 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifire        转到状态 25
    StructSpecifire  转到状态 7
    DefList          转到状态 40
    Def              转到状态 27


State 28

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 29

   23 ParamDec: Specifire . VarDec

    ID  shift, and go to state 32

    VarDec  转到状态 41


State 30

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 31

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 43

    $default  reduce using rule 22 (VarList)


State 32

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 33

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 34

   18 VarDec: VarDec LB INTEGER . RB

    RB  shift, and go to state 44


State 35

   24 Compst: LC DefList . StmtList RC

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    RETURN      shift, and go to state 48
    IF          shift, and go to state 49
    WHILE       shift, and go to state 50
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55
    LC          shift, and go to state 23

    $default  reduce using rule 26 (StmtList)

    Compst    转到状态 56
    StmtList  转到状态 57
    Stmt      转到状态 58
    Exp       转到状态 59


State 36

   18 VarDec: VarDec . LB INTEGER RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 38 (Dec)


State 37

   35 Def: Specifire DecList . SEMI

    SEMI  shift, and go to state 61


State 38

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 36 (DecList)


State 39

   12 StructSpecifire: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifire)


State 40

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 41

   18 VarDec: VarDec . LB INTEGER RB
   23 ParamDec: Specifire VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 42

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 43

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifire        转到状态 29
    StructSpecifire  转到状态 7
    VarList          转到状态 63
    ParamDec         转到状态 31


State 44

   18 VarDec: VarDec LB INTEGER RB .

    $default  reduce using rule 18 (VarDec)


State 45

   66 Exp: INTEGER .

    $default  reduce using rule 66 (Exp)


State 46

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 47

   68 Exp: CHAR .

    $default  reduce using rule 68 (Exp)


State 48

   29 Stmt: RETURN . Exp SEMI

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 64


State 49

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 65


State 50

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 66


State 51

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 67

    $default  reduce using rule 65 (Exp)


State 52

   57 Exp: DOUBLEPLUS . Exp

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 68


State 53

   58 Exp: DOUBLESUB . Exp

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 69


State 54

   60 Exp: MINUS . Exp

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 70


State 55

   59 Exp: LP . Exp RP

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 71


State 56

   28 Stmt: Compst .

    $default  reduce using rule 28 (Stmt)


State 57

   24 Compst: LC DefList StmtList . RC

    RC  shift, and go to state 72


State 58

   25 StmtList: Stmt . StmtList

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    RETURN      shift, and go to state 48
    IF          shift, and go to state 49
    WHILE       shift, and go to state 50
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55
    LC          shift, and go to state 23

    $default  reduce using rule 26 (StmtList)

    Compst    转到状态 56
    StmtList  转到状态 73
    Stmt      转到状态 58
    Exp       转到状态 59


State 59

   27 Stmt: Exp . SEMI
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . MUL Exp
   44    | Exp . DIV Exp
   45    | Exp . GREAT Exp
   46    | Exp . LESS Exp
   47    | Exp . GASSIGN Exp
   48    | Exp . LESSASSIGN Exp
   49    | Exp . DOUBLEASSIGN Exp
   50    | Exp . NOTASSIGN Exp
   51    | Exp . PLUSASSIGN Exp
   52    | Exp . SUBASSIGN Exp
   53    | Exp . MULASSIGN Exp
   54    | Exp . DIVASSIGN Exp
   55    | Exp . DOUBLEPLUS
   56    | Exp . DOUBLESUB
   63    | Exp . LB Exp RB
   64    | Exp . SPDOT ID

    SEMI          shift, and go to state 74
    SPDOT         shift, and go to state 75
    ASSIGNOP      shift, and go to state 76
    GREAT         shift, and go to state 77
    LESS          shift, and go to state 78
    GASSIGN       shift, and go to state 79
    LESSASSIGN    shift, and go to state 80
    DOUBLEASSIGN  shift, and go to state 81
    NOTASSIGN     shift, and go to state 82
    PLUSASSIGN    shift, and go to state 83
    SUBASSIGN     shift, and go to state 84
    DIVASSIGN     shift, and go to state 85
    MULASSIGN     shift, and go to state 86
    DOUBLEPLUS    shift, and go to state 87
    DOUBLESUB     shift, and go to state 88
    PLUS          shift, and go to state 89
    MINUS         shift, and go to state 90
    MUL           shift, and go to state 91
    DIV           shift, and go to state 92
    LB            shift, and go to state 93


State 60

   39 Dec: VarDec ASSIGNOP . Exp

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 94


State 61

   35 Def: Specifire DecList SEMI .

    $default  reduce using rule 35 (Def)


State 62

   37 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   转到状态 36
    DecList  转到状态 95
    Dec      转到状态 38


State 63

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 64

   29 Stmt: RETURN Exp . SEMI
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . MUL Exp
   44    | Exp . DIV Exp
   45    | Exp . GREAT Exp
   46    | Exp . LESS Exp
   47    | Exp . GASSIGN Exp
   48    | Exp . LESSASSIGN Exp
   49    | Exp . DOUBLEASSIGN Exp
   50    | Exp . NOTASSIGN Exp
   51    | Exp . PLUSASSIGN Exp
   52    | Exp . SUBASSIGN Exp
   53    | Exp . MULASSIGN Exp
   54    | Exp . DIVASSIGN Exp
   55    | Exp . DOUBLEPLUS
   56    | Exp . DOUBLESUB
   63    | Exp . LB Exp RB
   64    | Exp . SPDOT ID

    SEMI          shift, and go to state 96
    SPDOT         shift, and go to state 75
    ASSIGNOP      shift, and go to state 76
    GREAT         shift, and go to state 77
    LESS          shift, and go to state 78
    GASSIGN       shift, and go to state 79
    LESSASSIGN    shift, and go to state 80
    DOUBLEASSIGN  shift, and go to state 81
    NOTASSIGN     shift, and go to state 82
    PLUSASSIGN    shift, and go to state 83
    SUBASSIGN     shift, and go to state 84
    DIVASSIGN     shift, and go to state 85
    MULASSIGN     shift, and go to state 86
    DOUBLEPLUS    shift, and go to state 87
    DOUBLESUB     shift, and go to state 88
    PLUS          shift, and go to state 89
    MINUS         shift, and go to state 90
    MUL           shift, and go to state 91
    DIV           shift, and go to state 92
    LB            shift, and go to state 93


State 65

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 97


State 66

   32 Stmt: WHILE LP . Exp RP Stmt

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55

    Exp  转到状态 98


State 67

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INTEGER     shift, and go to state 45
    FLOAT       shift, and go to state 46
    CHAR        shift, and go to state 47
    ID          shift, and go to state 51
    DOUBLEPLUS  shift, and go to state 52
    DOUBLESUB   shift, and go to state 53
    MINUS       shift, and go to state 54
    LP          shift, and go to state 55
    RP          shift, and go to state 99

    Exp   转到状态 100
    Args  转到状态 101


State 68

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . MUL Exp
   44    | Exp . DIV Exp
   45    | Exp . GREAT Exp
   46    | Exp . LESS Exp
   47    | Exp . GASSIGN Exp
   48    | Exp . LESSASSIGN Exp
   49    | Exp . DOUBLEASSIGN Exp
   50    | Exp . NOTASSIGN Exp
   51    | Exp . PLUSASSIGN Exp
   52    | Exp . SUBASSIGN Exp
   53    | Exp . MULASSIGN Exp
   54    | Exp . DIVASSIGN Exp
   55    | Exp . DOUBLEPLUS
   56    | Exp . DOUBLESUB
   57    | DOUBLEPLUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . SPDOT ID

    SPDOT       shift, and go to state 75
    GREAT       shift, and go to state 77
    PLUSASSIGN  shift, and go to state 83
    SUBASSIGN   shift, and go to state 84
    DIVASSIGN   shift, and go to state 85
    MULASSIGN   shift, and go to state 86
    MUL         shift, and go to state 91
    DIV         shift, and go to state 92
    LB          shift, and go to state 93

    GREAT     [reduce using rule 57 (Exp)]
    $default  reduce using rule 57 (Exp)


State 69

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . MUL Exp
   44    | Exp . DIV Exp
   45    | Exp . GREAT Exp
   46    | Exp . LESS Exp
   47    | Exp . GASSIGN Exp
   48    | Exp . LESSASSIGN Exp
   49    | Exp . DOUBLEASSIGN Exp
   50    | Exp . NOTASSIGN Exp
   51    | Exp . PLUSASSIGN Exp
   52    | Exp . SUBASSIGN Exp
   53    | Exp . MULASSIGN Exp
   54    | Exp . DIVASSIGN Exp
   55    | Exp . DOUBLEPLUS
   56    | Exp . DOUBLESUB
   58    | DOUBLESUB Exp .
   63    | Exp . LB Exp RB
   64    | Exp . SPDOT ID

    SPDOT       shift, and go to state 75
    GREAT       shift, and go to state 77
    PLUSASSIGN  shift, and go to state 83
    SUBASSIGN   shift, and go to state 84
    DIVASSIGN   shift, and go to state 85
    MULASSIGN   shift, and go to state 86
    MUL         shift, and go to state 91
    DIV         shift, and go to state 92
    LB          shift, and go to state 93

    GREAT     [reduce using rule 58 (Exp)]
    $default  reduce using rule 58 (Exp)


State 70
